# suki

./: .gitignore  .suki.example2  Cargo.toml  LICENSE  README.md  example.suki
builds/: linux.yml
contrib/: _incr_version
src/: main.rs  suki.rs
